debian-installer-utils (0.34) unstable; urgency=low

  * Alastair McKinstry
   - Add di-utils-terminfo, providing terminfo entries for slang.
   - di-utils-shell calls /usr/bin/clear if possible.
  * Kęstutis Biliūnas
    - Update Lithuanian translation (lt.po).
  * Petter Reinholdtsen
    - Update nb.po.
  * Claus Hindsgaul
    - Update da (Danish) translation.

 -- Alastair McKinstry <mckinstry@debian.org>  Mon, 27 Oct 2003 10:15:43 +0100

debian-installer-utils (0.33) unstable; urgency=low

  * Joey Hess
    - add di-utils-exit-installer, which is only useful for exiting
      installer demos (so priority extra)
  * Kęstutis Biliūnas
    - Update Lithuanian translation (lt.po).

 -- Joey Hess <joeyh@debian.org>  Wed, 22 Oct 2003 22:33:25 -0400

debian-installer-utils (0.32) unstable; urgency=low

  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Christian Perrier
    - Update French translation.
  * Bart Cornelis
    - update dutch translation (nl.po)
  * Tommi Vainikainen
    - Add Finnish (fi.po) translation
  * Joey Hess
    - Documentation updates.
    - Remove unused exec.c, shell.c.
  * Miroslav Kure
    - Update Czech translation (cs.po).
  * Ilgiz Kalmetev
    - Update Russian translation (ru.po).  Closes: #214354

 -- Bart Cornelis <cobaco@linux.be>  Sun, 19 Oct 2003 17:02:22 +0200

debian-installer-utils (0.31) unstable; urgency=low

  * Christian Perrier
    - Update French translation.
  * Joey Hess
    - Add pipe_progress, a new little program to cat a in a pipeline,
      outputting a dot every second while there is activity. Based on a
      program by Rob Landley.
    - Add a di-utils-bootfloppy udeb, which for now includes only
      pipe_progress.

 -- Joey Hess <joeyh@debian.org>  Fri, 17 Oct 2003 17:43:52 -0400

debian-installer-utils (0.30) unstable; urgency=low

  * André Luís Lopes
    - Updated pt_BR (Brazilian Portuguese) translation.
  * Matt Kraai
    - Fix the long description for di-utils-reboot.
